Add ITs for Java 17 and 21 (#126) (#133)
Uses Maven profiles to configure ITs to validate the Java version
and run specific test suits for each Java version.

Closes #126