@@ -18,12 +18,14 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.6.3</version>
 				<configuration>
-					<source>11</source>
+					<source>17</source>
 					<additionalJOptions>
 						<additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
 						<additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
 						<additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
 						<additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</additionalJOption>
+						<additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption>
+						<additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
 						<additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
 					</additionalJOptions>
 					<doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
@@ -32,7 +34,6 @@
 							<groupId>org.asciidoctor</groupId>
 							<artifactId>asciidoclet</artifactId>
 							<version>@project.version@</version>
-							<classifier>shaded</classifier>
 						</docletArtifact>
 					</docletArtifacts>
 					<overview>src/main/java/overview.adoc</overview>
